
<resources>
    <!-- General buttons and Strings-->
    <string name="bt_ok_lbl">OK</string>
    <string name="bt_yes_lbl">Yes</string>
    <string name="bt_no_lbl">No</string>
    <string name="bt_cancel_lbl">Cancel</string>
    <string name="bt_confirm_lbl">Confirm</string>
    <string name="bt_accept_lbl">Accept</string>
    <string name="bt_reject_lbl">Reject</string>
    <string name="bt_delete_lbl">Delete</string>
    <string name="bt_open_lbl">Open</string>
    <string name="bt_close_lbl">Close</string>
    <string name="bt_enable_lbl">Enable</string>
    <string name="bt_disable_lbl">Disable</string>

    <string name="bt_save_lbl">Save</string>
    <string name="bt_update_lbl">Update</string>
    <string name="bt_gps_lbl">Get GPS Location</string>
    <string name="bt_barcode_lbl">Scan Barcode</string>

    <string name="gps_lat_lbl">Latitude:</string>
    <string name="gps_lon_lbl">Longitude:</string>
    <string name="gps_alt_lbl">Altitude:</string>
    <string name="gps_acc_lbl">Accuracy:</string>

    <string name="gps_title_lbl">GPS Location</string>
    <string name="gps_permissions_error">You must grant Location permissions to be able to use the GPS feature</string>
    <string name="gps_loading_lbl">Loading GPS Location</string>
    <string name="gps_loading_error">Couldn\'t provide GPS Location</string>
    <string name="gps_no_provider_available_error">Providers are disabled. To be able to continue, enable Network or Location provider</string>

    <string name="device_id_title_lbl">Getting Device Id</string>
    <string name="device_id_permissions_error">You must grant READ_PHONE_STATE permissions to be able to read the device id value that will be used in the form.</string>

    <string name="column_required_lbl">This field is required</string>
    <string name="column_validation_err_lbl">The value of this field is invalid</string>

    <string name="repeat_prompt_lbl">Do you want to add an entry?</string>
    <string name="bt_add_lbl">Add New Entry</string>
    <string name="bt_remove_last_lbl">Remove Last Entry</string>

    <string name="datetime_selector_title_lbl">Select the date</string>
    <string name="datetime_selector_button_lbl">Select date</string>
    <string name="datetime_selector_not_selected_lbl">Date not selected</string>

    <string name="time_selector_title_lbl">Select the time</string>
    <string name="time_selector_button_lbl">Select time</string>
    <string name="time_selector_not_selected_lbl">Time not selected</string>

    <string name="column_audio_view_record_lbl">Record Audio</string>
    <string name="column_audio_view_no_recorded_lbl">No audio recorded</string>
    <string name="column_audio_view_record_cancelled_lbl">Audio capture cancelled</string>
    <string name="column_audio_view_no_app_lbl">No recording app installed</string>
    <string name="column_audio_view_playback_error_lbl">Playback Error</string>
    <string name="column_audio_view_save_error_lbl">Error saving audio file</string>
    <string name="column_audio_view_dir_not_found_lbl">Error: instances directory not found</string>
    <string name="column_audio_view_record_instruction_lbl">Press Start to begin recording.</string>
    <string name="column_audio_view_start_record_lbl">Start Recording</string>
    <string name="column_audio_view_stop_record_lbl">Stop Recording</string>
    <string name="column_audio_view_cancel_lbl">Cancel</string>
    <string name="column_audio_view_error_recording">Error while recording audio.</string>

    <string name="column_image_view_take_picture_lbl">Take Picture</string>
    <string name="column_image_view_no_image_lbl">No image captured</string>
    <string name="column_image_view_capture_cancelled_lbl">Image capture cancelled</string>
    <string name="column_image_view_no_app_lbl">No camera app installed</string>
    <string name="column_image_view_save_error_lbl">Error saving image file</string>

    <string name="column_video_view_record_lbl">Record Video</string>
    <string name="column_video_view_play_lbl">Play Video</string>
    <string name="column_video_view_no_video_lbl">No video recorded</string>
    <string name="column_video_view_capture_cancelled_lbl">Video capture cancelled</string>
    <string name="column_video_view_no_app_lbl">No video app installed</string>
    <string name="column_video_view_save_error_lbl">Error saving video file</string>
    <string name="column_video_view_playback_error_lbl">Playback Error</string>
    <string name="camera_capture_image_title">Take Photo</string>
    <string name="camera_capture_video_title">Record Video</string>
    <string name="camera_capture_image_button">Capture</string>
    <string name="camera_capture_video_start_button">Record</string>
    <string name="camera_capture_video_stop_button">Stop</string>

    <string name="repeat_group_instance_index_lbl">%1$s of %2$s</string>

    <string name="info_lbl">Info</string>
    <string name="error_lbl">Error</string>

    <!-- calendar -->
    <string name="ethiopian_month_1_meskerem">Meskerem</string>
    <string name="ethiopian_month_2_tikimt">Tikimt</string>
    <string name="ethiopian_month_3_hidar">Hidar</string>
    <string name="ethiopian_month_4_tahsas">Tahsas</string>
    <string name="ethiopian_month_5_tir">Tir</string>
    <string name="ethiopian_month_6_yekatit">Yekatit</string>
    <string name="ethiopian_month_7_megabit">Megabit</string>
    <string name="ethiopian_month_8_miyazya">Miyazya</string>
    <string name="ethiopian_month_9_ginbot">Ginbot</string>
    <string name="ethiopian_month_10_sene">Sene</string>
    <string name="ethiopian_month_11_hamle">Hamle</string>
    <string name="ethiopian_month_12_nehase">Nehase</string>
    <string name="ethiopian_month_13_pagume">Pagume</string>

    <string-array name="ethiopian_months_array">
        <item>@string/ethiopian_month_1_meskerem</item>
        <item>@string/ethiopian_month_2_tikimt</item>
        <item>@string/ethiopian_month_3_hidar</item>
        <item>@string/ethiopian_month_4_tahsas</item>
        <item>@string/ethiopian_month_5_tir</item>
        <item>@string/ethiopian_month_6_yekatit</item>
        <item>@string/ethiopian_month_7_megabit</item>
        <item>@string/ethiopian_month_8_miyazya</item>
        <item>@string/ethiopian_month_9_ginbot</item>
        <item>@string/ethiopian_month_10_sene</item>
        <item>@string/ethiopian_month_11_hamle</item>
        <item>@string/ethiopian_month_12_nehase</item>
        <item>@string/ethiopian_month_13_pagume</item>
    </string-array>


</resources>
