<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Dialog Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/nui_dialog_border_thin"
        android:orientation="horizontal"
        android:elevation="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:alpha="0.75"
            android:background="@mipmap/nui_sync_details_icon_2_small"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/txtDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/column_audio_view_record_lbl"
            android:textSize="@dimen/datetime_selector_dialog_tittle_txtsize"
            android:textColor="@color/nui_color_text_red"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- main dialog -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/column_audio_view_record_instruction_lbl"
            android:textColor="@color/nui_color_text_darkgray"/>

        <TextView
            android:id="@+id/txtRecordTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="00:00"
            android:textColor="@color/nui_color_text_darkgray"
            android:textSize="32sp" />
    </LinearLayout>

    <!-- Start/Stop Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btStartRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_audio_view_start_record_lbl"
            android:background="@drawable/nui_btnd_rone_dgbevel"
            android:textColor="@color/white"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"/>

        <Button
            android:id="@+id/btStopRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:text="@string/column_audio_view_stop_record_lbl"
            android:background="@drawable/nui_btnd_rone_dgbevel"
            android:textColor="@color/white"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"/>

    </LinearLayout>

    <!-- Cancel Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDialogCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nui_btnd_rone_gflat"
            android:text="@string/bt_cancel_lbl"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

    </LinearLayout>
</LinearLayout>
