<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/column_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtColumnRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="*"
            android:textStyle="bold"
            android:textColor="@color/nui_color_text_red"
            android:textSize="@dimen/column_name_textsize" />

        <TextView
            android:id="@+id/txtColumnName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:gravity="left|center_horizontal"
            android:text="Date of Birth"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/column_name_textsize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btGetGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_gps_lbl"
            android:textSize="@dimen/column_value_textsize"
            android:background="@drawable/nui_btnd_rone_gflat"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/nui_list_rborder_panel">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/gps_lat_lbl"
                android:gravity="right"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGpsLatitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="N 37º24'26&quot;"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/gps_lon_lbl"
                android:gravity="right"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGpsLongitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="W 122º2'38&quot;"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/gps_alt_lbl"
                android:gravity="right"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGpsAltitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="0m"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/gps_acc_lbl"
                android:gravity="right"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGpsAccuracy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="20m"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black" />

        </TableRow>
    </TableLayout>


</LinearLayout>
