<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Dialog Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/nui_dialog_border_thin"
        android:orientation="horizontal"
        android:elevation="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:alpha="0.75"
            android:background="@mipmap/nui_sync_details_icon_2_small"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/txtDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/datetime_selector_title_lbl"
            android:textSize="18sp"
            android:textColor="@color/nui_color_text_red"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- main dialog -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">

        <!-- Dialog Message Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtDialogMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/sync_progress_textsize"
                android:textColor="@color/nui_color_text_darkgray"
                android:text="Can you use this Message Dialog properly?" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <DatePicker
                android:id="@+id/dtpColumnDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:textSize="@dimen/column_value_textsize"
                android:textColor="@color/black"/>

            <TimePicker
                android:id="@+id/dtpColumnTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/column_value_textsize"
                android:timePickerMode="spinner"
                android:visibility="visible"/>

        </LinearLayout>

    </LinearLayout>

    <!-- buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDialogOk"
            android:layout_width="@dimen/dialog_factory_button_size"
            android:layout_height="@dimen/dialog_factory_button_height"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:text="@string/bt_ok_lbl"
            android:background="@drawable/nui_btnd_rone_dgbevel"
            android:textColor="@color/white"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/btDialogCancel"
            android:layout_width="@dimen/dialog_factory_button_size"
            android:layout_height="@dimen/dialog_factory_button_height"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:text="@string/bt_cancel_lbl"
            android:background="@drawable/nui_btnd_rone_dgbevel"
            android:textColor="@color/white"
            android:elevation="5dp"/>

    </LinearLayout>



</LinearLayout>
