<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/columngroup_view_margin_left"
        android:layout_marginEnd="@dimen/columngroup_view_margin_right"
        android:layout_marginTop="10dp"
        android:background="@drawable/nui_list_rborder_panel">

        <!-- group name -->
        <LinearLayout
            android:id="@+id/formRepeatGroupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-10dp"
            android:padding="@dimen/columngroup_view_padding"
            android:paddingTop="@dimen/columngroup_view_padding_top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtRepeatGroupRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="*"
                    android:textStyle="bold"
                    android:textColor="@color/nui_color_text_red"
                    android:textSize="@dimen/column_name_textsize"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txtRepeatGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:gravity="left|center_horizontal"
                    android:text="Field Worker ID"
                    android:textStyle="bold|italic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/column_name_textsize" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtRepeatGroupIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/columngroup_repeat_instance_margin_top"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="1 of 3"
                android:singleLine="true"
                android:textSize="@dimen/columngroup_repeat_instance_textsize"
                android:textColor="@color/nui_color_text_darkgray"
                android:visibility="gone"/>

        </LinearLayout>


        <!-- entries -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtRepeatPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_prompt_lbl"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="60dp"/>

            <TextView
                android:id="@+id/txtRepeatGroupInnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Group Name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/nui_color_text_red"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btAddRepeat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bt_add_lbl"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/nui_btnd_rone_dgbevel"
                android:textColor="@color/white"
                android:elevation="5dp"/>

            <Button
                android:id="@+id/btRemoveLastRepeat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/bt_remove_last_lbl"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/nui_btnd_rone_gflat"
                android:textColor="@color/white"
                android:elevation="5dp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
